<resources>
    <string name="app_name">Smart Tic Tac Toe</string>
    <string name="players_names">Players</string>
    <string name="single_player">Single Player</string>
    <string name="Two_players">Two Players</string>
    <string name="Options">Options</string>
    <string name="Exit">Exit</string>
    <string name="player_name">Name</string>
    <string name="opponent_name">Opponent</string>
    <string name="type_here">type here</string>
    <string name="back">Back</string>
    <string name="start">Start</string>
    <string name="playerOne_score">0</string>
    <string name="playerTwo_score">0</string>
    <string name="sound">Sound</string>
    <string name="board_size">Board Size</string>
    <string name="new_Game">NEW GAME</string>
    <string name="gameOver">Game Over</string>
    <string name="restart_Game">RESTART</string>
    <string name="replay_Game">REPLAY</string>
    <string name="you_win">You Win!</string>
    <string name="you_lose">You Lose!</string>
    <string name="draw">A Draw!</string>
    <string name="singlyePlayersname">You</string>
    <string name="computerOpponent">Smart Bot</string>
    <string name="smart_bot">Smart Bot</string>
    <string name="about_btn">About</string>
    <string name="help_btn">Help</string>

    <string name="share_with">Share with...</string>

    <string name="share_text">Hello,\nThis tic tac toe game was designed and developed by Smart Joseph, an ALC 2.0 beginner from Uyo, Nigeria. \n\nCheck it out here:\nhttps://play.google.com/store/apps/details?id=com.smartjoseph.smarttictactoe</string>

    <string name="help_information"><b>HOW TO PLAY</b>\nClick on the grid boxes to play.\nThe first player uses the X symbol, while the opponent uses the O symbol.\n\nWin - the user wins by  placing three or more Xs or Os depending on the square grid in a horizontal, vertical or diagonal row.\nDraw - If none of the players has three in a row.\n\n<b>GAME BUTTONS</b>\nBack - Clicking this button ends the game and takes you back to the menu\n\nNew Game - Clicking this button allows you to start a new gaming session\n\nHelp - Clicking this button opens this help menu you are currently reading\n\nOptions - This button takes you to a view where you can set the game sound to on/off</string>
    <string name="share_btn">Share</string>
    <string name="feedback_btn">Feedback</string>
</resources>
