<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgd"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="com.smartjoseph.smarttictactoe.Players">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />

    <RelativeLayout
        android:layout_width="500dp"
        android:layout_height="350dp"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/colorPrimaryDark">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.3"
            android:scaleType="fitXY"
            android:src="@drawable/wood_texture" />

        <TextView
            android:id="@+id/playesTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:fontFamily="casual"
            android:text="@string/players_names"
            android:textAlignment="center"
            android:textColor="@color/colorOrange"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/playerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/playesTitle"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:gravity="end"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/activity_vertical_margin"
            android:paddingStart="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/player_name"
                android:textAlignment="textEnd"
                android:textColor="@color/colorYellow"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:src="@drawable/playerone_symbol" />

            <EditText
                android:id="@+id/playerOneNameEditTxt"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small_margin"
                android:background="@android:color/white"
                android:ems="10"
                android:fontFamily="casual"
                android:inputType="textPersonName"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/opponentName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/playerName"
            android:layout_marginTop="@dimen/small_margin"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/small_margin"
            android:paddingStart="@dimen/small_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:fontFamily="casual"
                android:text="@string/opponent_name"
                android:textAlignment="center"
                android:textColor="@color/colorOrange"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:scaleType="centerCrop"
                android:src="@drawable/playertwo_symbol" />


            <EditText
                android:id="@+id/opponentNameEditTxt"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small_margin"
                android:background="@android:color/white"
                android:ems="10"
                android:fontFamily="casual"
                android:inputType="textPersonName"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/opponentName"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small_margin"
                android:layout_marginStart="@dimen/small_margin"
                android:fontFamily="casual"
                android:text="@string/board_size"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/boardSize3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="@dimen/small_margin"
                android:layout_marginStart="@dimen/small_margin"
                android:fontFamily="casual"
                android:text="3" />

            <Button
                android:id="@+id/boardSize5"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:fontFamily="casual"
                android:text="5" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:orientation="horizontal"
            android:paddingEnd="32dp"
            android:paddingStart="32dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin">

                <ImageButton
                    android:id="@+id/back_btn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:layout_marginStart="@dimen/small_margin"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"
                    android:scaleX="-1"
                    app:srcCompat="@drawable/ic_play" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/back"
                    android:textColor="@color/colorOrange"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin">

                <ImageButton
                    android:id="@+id/start_btn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:layout_marginStart="@dimen/small_margin"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/ic_play" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Start"
                    android:textColor="@color/colorOrange"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>

